test/valid/recurse.js
function f() { return f(); }
f;
