test/invalid/builtins/string-error.js
function f(o) { return o.moo; }
f('hi');
